--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <!--comment-->
     <h2>Git collaboration test</h2>
 
-    <p> This is my first git collaboration trial project </p>
+    <p> This is my first git collaboration trial project
+        Am adding content to this paragraph for stage trialss </p>
 </body>
 </html>
