--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>Git collaboration test</h2>
 
     <p> This is my first git collaboration trial project
-        Am adding content to this paragraph for stage trialss </p>
+        Am adding content to this paragraph for stage trials
+    another paragraph for trials </p>
 </body>
 </html>
