--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <p> This is my first git collaboration trial project
         Am adding content to this paragraph for stage trials
-    another paragraph for trials </p>
+    another paragraph for trials
+additional change </p>
 </body>
 </html>
