--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p> This is my first git collaboration trial project
         Am adding content to this paragraph for stage trials
     another paragraph for trials
-additional change </p>
+additional change
+another one</p>
+<p> This is the second paragraph</p>
 </body>
 </html>
