--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 additional change
 another one</p>
 <p> This is the second paragraph</p>
-<p> adding a git branch</p>
+<p> adding a git branch for trial</p>
 </body>
 </html>
